--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 
 # production
 /dist
-
+/example
+/.next
 # misc
 .DS_Store
 *.pem
@@ -30,5 +31,4 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
 storybook-static
