--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
       "typescript": "4.8.4"
    },
    "peerDependencies": {
+      "lodash/debounce": "^4.17.21",
       "next": ">=13",
       "react": ">=18",
       "react-dom": ">=18",
@@ -82,6 +83,7 @@
    "dependencies": {
       "@faker-js/faker": "7.6.0",
       "lint-staged": "^13.1.0",
+      "lodash": "^4.17.21",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
       "use-deep-compare": "^1.1.0"
