--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
       "react-dom": ">=18",
       "react-uuid": "^2.0.0",
       "tailwindcss": "^3.2.1",
-      "typescript": ">=4"
+      "typescript": ">=4",
+      "screenfull": "^6.0.2"
    },
    "dependencies": {
       "@faker-js/faker": "7.6.0",
@@ -86,6 +87,7 @@
       "lodash": "^4.17.21",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
+      "screenfull": "^6.0.2",
       "use-deep-compare": "^1.1.0"
    },
    "config": {
