--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
       "typescript": "4.8.4"
    },
    "peerDependencies": {
-      "lodash/debounce": "^4.17.21",
+      "lodash": "^4.17.21",
       "next": ">=13",
       "react": ">=18",
       "react-dom": ">=18",
