--- a/package.json
+++ b/package.json
@@ -72,14 +72,10 @@
       "typescript": "4.8.4"
    },
    "peerDependencies": {
-      "lodash": "^4.17.21",
       "next": ">=13",
       "react": ">=18",
       "react-dom": ">=18",
-      "react-uuid": "^2.0.0",
-      "tailwindcss": "^3.2.1",
-      "typescript": ">=4",
-      "screenfull": "^6.0.2"
+      "typescript": ">=4"
    },
    "dependencies": {
       "@faker-js/faker": "7.6.0",
@@ -88,6 +84,7 @@
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
       "screenfull": "^6.0.2",
+      "tslib": "^2.4.1",
       "use-deep-compare": "^1.1.0"
    },
    "config": {
