--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
       "@faker-js/faker": "7.6.0",
       "lint-staged": "^13.1.0",
       "lodash": "^4.17.21",
+      "lodash.throttle": "^4.1.1",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
       "screenfull": "^6.0.2",
