--- a/package.json
+++ b/package.json
@@ -79,12 +79,14 @@
    },
    "dependencies": {
       "@faker-js/faker": "7.6.0",
+      "fast-deep-equal": "^3.1.3",
       "lint-staged": "^13.1.0",
       "lodash": "^4.17.21",
       "lodash.throttle": "^4.1.1",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
       "screenfull": "^6.0.2",
+      "shallowequal": "^1.1.0",
       "tslib": "^2.4.1",
       "use-deep-compare": "^1.1.0"
    },
