--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
       "lodash.throttle": "^4.1.1",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
+      "resize-observer-polyfill": "^1.5.1",
       "screenfull": "^6.0.2",
       "shallowequal": "^1.1.0",
       "tslib": "^2.4.1",
