--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,22 @@
       "allowSyntheticDefaultImports": true,
       "declaration": true,
       "esModuleInterop": true,
-      "jsx": "react",
-      "lib": ["es5", "ES2015", "ES2016", "ESNext", "DOM", "ES2021"],
-      "module": "es2015",
+      "jsx": "react-jsx",
+      "lib": ["ESNext", "DOM", "ES2021"],
+      "skipLibCheck": true,
+      "module": "ES2020",
       "moduleResolution": "node",
       "noImplicitAny": false,
       "importHelpers": true,
-      "pretty": true,
-
-      // "noUnusedLocals": false,
-      "noUnusedParameters": false,
-      "outDir": "./dist/esm",
-      "sourceMap": true,
+      "noUnusedLocals": true,
+      // "noImplicitReturns": true,
+      "noUnusedParameters": true,
+      "noFallthroughCasesInSwitch": true,
+      "outDir": "./dist",
+      "sourceMap": false,
       "strict": true,
       "strictNullChecks": false,
-      "target": "es6",
+      "target": "ES2020",
       "types": ["node"]
    },
    "include": ["src/**/*.ts", "src/**/*.tsx"],
