--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "@ryansonshine/cz-conventional-changelog": "3.3.4",
       "@types/jest": "29.2.3",
       "@types/node": "18.11.9",
-      "@types/react": "18.0.25",
+      "@types/react": "18.0.7",
       "@types/react-dom": "18.0.7",
       "@typescript-eslint/eslint-plugin": "^5.41.0",
       "@typescript-eslint/parser": "^5.41.0",
@@ -67,29 +67,20 @@
       "react": "18.2.0",
       "react-dom": "18.2.0",
       "tailwindcss": "^3.2.1",
-      "ts-jest": "29.0.3",
-      "tsup": "6.2.3",
       "typescript": "4.8.4"
    },
    "peerDependencies": {
-      "next": ">=13",
       "react": ">=18",
-      "react-dom": ">=18",
-      "typescript": ">=4"
+      "react-dom": ">=18"
    },
    "dependencies": {
       "@faker-js/faker": "7.6.0",
-      "fast-deep-equal": "^3.1.3",
       "lint-staged": "^13.1.0",
       "lodash": "^4.17.21",
       "lodash.throttle": "^4.1.1",
       "react-uuid": "^2.0.0",
       "release-it": "^15.5.1",
-      "resize-observer-polyfill": "^1.5.1",
-      "screenfull": "^6.0.2",
-      "shallowequal": "^1.1.0",
-      "tslib": "^2.4.1",
-      "use-deep-compare": "^1.1.0"
+      "tslib": "^2.4.1"
    },
    "config": {
       "commitizen": {
