build: trying to fix hook errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
       "importHelpers": true,
       "noUnusedLocals": true,
       // "noImplicitReturns": true,
+      "outDir": "./dist/esm",
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true,
-      "outDir": "./dist",
       "sourceMap": false,
       "strict": true,
       "strictNullChecks": false,
