--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
       "typescript": "4.8.4"
    },
    "peerDependencies": {
-      "react": ">=18",
-      "react-dom": ">=18"
+      "react": ">=18"
    },
    "dependencies": {
       "@faker-js/faker": "7.6.0",
@@ -104,5 +103,8 @@
          "access": "public",
          "publishPath": "--registry https://registry.npmjs.org"
       }
+   },
+   "resolutions": {
+      "react": "18.2.0"
    }
 }
