--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "oceaners-hooks",
    "description": "Hooks library for React.",
-   "version": "1.3.0-5",
+   "version": "1.3.0",
    "author": "oceaners-dev",
    "license": "ISC",
    "keywords": [],
