--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,12 @@
    },
    "eslint.codeActionsOnSave.rules": ["no-multi-spaces"],
    "eslint.lintTask.enable": true,
-   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+   "eslint.validate": [
+      "javascript",
+      "javascriptreact",
+      "typescript",
+      "typescriptreact"
+   ],
 
    "editor.inlineSuggest.enabled": true,
    "editor.suggestSelection": "first",
@@ -47,7 +52,7 @@
    },
 
    "editor.defaultFormatter": "esbenp.prettier-vscode",
-   "editor.cursorSmoothCaretAnimation": true,
+   "editor.cursorSmoothCaretAnimation": "on",
    "[typescriptreact]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
    },
